<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ProfileActivity">

    <!--JudulProfile-->
    <TextView
        android:id="@+id/judulProfile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/profile"
        android:textColor="@android:color/darker_gray"
        android:textSize="30sp"
        android:layout_marginStart="10dp"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/judulProfile">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <!--Tampilkan Email-->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Email"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/hasilPesan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:textAppearance="@style/TextAppearance.AppCompat.Title" />

            <!--Tampilkan Nama-->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Nama"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                />

            <TextView
                android:id="@+id/hasilPesan2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:textAppearance="@style/TextAppearance.AppCompat.Title" />

            <!--Tampilkan Phone-->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/phone"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                />

            <TextView
                android:id="@+id/hasilPesan3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:textAppearance="@style/TextAppearance.AppCompat.Title" />

            <!--Tampilkan address-->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Address"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/hasilPesan4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:textAppearance="@style/TextAppearance.AppCompat.Title" />

            <!--Tampilkan Biography-->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Biography"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/hasilPesan5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:textAppearance="@style/TextAppearance.AppCompat.Title" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/CallNow"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/call_now"
                    android:onClick="pushcall"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.appcompat.widget.LinearLayoutCompat>
    </ScrollView>


</RelativeLayout>